unpackaged/main/default/objects/GC_Core_Interface_Log__c/GC_Core_Interface_Log__c.object-meta.xml
<CustomObject>
    <description>GES Connect (GC) A log item that is generated everytime a call is made into the COREInterface class</description>
    <label>GC Core Interface Log</label>
    <nameField>
        <displayFormat>CORELOG-{0000000000}</displayFormat>
        <label>GC Core Interface Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GC Core Interface Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>