unpackaged/main/default/objects/GC_Core_Interface_Log__c/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <description>The content of the call that is made into the COREInterface class (JSON Serialized)</description>
    <label>Message Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>