unpackaged/main/default/objects/GC_Core_Interface_Log__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>The method in the COREInterface class that was accessed</description>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>