unpackaged/main/default/objects/GC_Core_Interface_Log__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the order which this log belongs to.</description>
    <inlineHelpText>Lookup to the order which this log belongs to.</inlineHelpText>
    <label>Order</label>
    <referenceTo>GC_Order__c</referenceTo>
    <relationshipLabel>GC Core Interface Logs</relationshipLabel>
    <relationshipName>GC_Core_Interface_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>