unpackaged/main/default/objects/GC_Core_Interface_Log__c/fields/Order_Task__c.field-meta.xml
<CustomField>
    <fullName>Order_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Order Task that this error belongs to.</description>
    <inlineHelpText>Lookup to the Order Task that this error belongs to.</inlineHelpText>
    <label>Order Task</label>
    <referenceTo>GC_GES_Order_Task__c</referenceTo>
    <relationshipLabel>GC Core Interface Logs</relationshipLabel>
    <relationshipName>GC_Core_Interface_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>