unpackaged/main/default/objects/GC_Core_Interface_Log__c/fields/Sent_Error_Email__c.field-meta.xml
<CustomField>
    <fullName>Sent_Error_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if Salesforce successfully sent an email to GES sfdc Alerts address.</description>
    <label>Sent Error Email?</label>
    <type>Checkbox</type>
</CustomField>